--- a/slides/class_1/class_1.tex
+++ b/slides/class_1/class_1.tex
@@ -107,12 +107,11 @@ public class Application {
 
 
 \begin{frame}{Utilizando o compilador de Java}
-    Se estiver utilizando o Eclipse, basta utilizar \menu{Project > Build
-    Project}. Executar a aplicação também chama o compilador.
-
-    Se estiver em um terminal, basta executar:
-
-    \texttt{javac Application.java}
+    \begin{itemize}
+        \item[] \icon{eclipse} Eclipse: \menu{Project > Build Project}.
+            Executar a aplicação também chama o compilador.
+        \item[] \icon{terminal} Terminal: \texttt{javac Application.java}
+    \end{itemize}
 \end{frame}
 
 
@@ -144,11 +143,12 @@ public class Application {
 
 
 \begin{frame}{Executando uma aplicação Java}
-    Se estiver utilizando o Eclipse, basta pressionar F11 (\menu{\icon{eclipse_run} Run}).
+    \begin{itemize}
+        \item[] \icon{eclipse} Eclipse: Pressionar \keys{Ctrl+F11}
+            (\menu{\icon{eclipse_run} Run}).
 
-    Se estiver em um terminal, basta chamar:
-
-    \texttt{java Application}
+        \item[] \icon{terminal} Terminal: \texttt{java Application}
+    \end{itemize}
 \end{frame}
 
 
