--- a/slides/class_1/class_1.tex
+++ b/slides/class_1/class_1.tex
@@ -281,32 +281,262 @@ public class Application {
     \begin{minted}{java}
         int a = 5;
         int b = 7;
-        int sub = a - b;
+        int diff = a - b;
     \end{minted}
 
-    Após executar o trecho acima, o valor de \texttt{sub} será $-2$.
+    Após executar o trecho acima, o valor de \texttt{diff} será $-2$.
 \end{frame}
 
 \begin{frame}[fragile]{Operações: Multiplicação}
     \begin{minted}{java}
         int a = 5;
         int b = 7;
-        int mul = a * b;
+        int product = a * b;
     \end{minted}
 
-    Após executar o trecho acima, o valor de \texttt{mul} será $35$.
+    Após executar o trecho acima, o valor de \texttt{product} será $35$.
 \end{frame}
 
 \begin{frame}[fragile]{Operações: Divisão}
     \begin{minted}{java}
         int a = 5;
         int b = 7;
-        int div = a / b;
+        int quotient = a / b;
     \end{minted}
 
     Esse é um caso especial em que, após executar o trecho acima, o valor de
-    \texttt{div} será $0$. Isso se dá porque estamos utilizando números
-    \emph{inteiros}. Se quisermos um resultado em números reais, precisamos utilizar variáveis
+    \texttt{quotient} será $0$. Isso se dá porque estamos utilizando números
+    \emph{inteiros}.
+\end{frame}
+
+\begin{frame}[fragile]{Operações: Divisão real}
+    Se quisermos um resultado em números reais, é preciso que \emph{pelo menos
+    um dos operandos} seja um número real (\texttt{float} ou \texttt{double}):
+
+    \begin{minted}{java}
+        int a = 5;
+        double b = 7;
+        double quotient = a / b;
+    \end{minted}
+
+    (OBS: Se o resultado da divisão for colocada em uma variável que represente
+    um inteiro, o resultado será \emph{truncado}, ou seja, o valor após a
+    vírgula é ignorado: $1.1 = 1$, $1.9 = 1$).
+\end{frame}
+
+
+\subsection{Declaração de Variáveis}
+
+\begin{frame}{Representando os produtos de uma loja}
+    Suponhamos que a tabela de preços da loja seja a seguinte:
+
+    \begin{center}
+        \begin{tabular}{|l|l|}
+            \hline Produto & Preço \\ \hline
+            Pão   & R\$0.50 \\
+            Leite & R\$3.00 \\
+            Suco  & R\$5.00 \\
+            Pizza & R\$9.99 \\
+            \hline
+        \end{tabular}
+    \end{center}
+
+    Assim, precisaremos guardar o preço dos produtos em variáveis.
+    Qual o tipo de dado seria mais adequado para representar dinheiro/preço?
+\end{frame}
+
+\begin{frame}{Escolhendo o tipo de dado}
+    \begin{itemize}
+        \item A primeira vista, \texttt{double} e \texttt{float} parecem ótimas
+            decições, afinal representam números reais.
+        \item \textbf{Porém}, ambos possuem erros de arredondamento, que podem
+            fazer ou você ou o cliente perder/ganhar dinheiro por uma simples
+            má escolha de tipo de dado.
+        \item Por exemplo, às vezes você escreve no código que o valor de um
+            \texttt{float} é $4.5$, porém o que efetivamente será carregado é
+            $4.4999999999$, que seria o número mais próximo representável por
+            um \texttt{float}.
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Escolhendo o tipo de dado}
+    Para resolver esse problema, algumas linguagens utilizam um tipo de dado
+    especial que possui um número fixo de casas decimais, chamado
+    \texttt{Decimal} (ou "Fixed Point", em contrapartida com "Floating Point"),
+    que pode servir para representar dinheiro (que sempre terá duas casas
+    decimais apenas).
+
+    Infelizmente Java não possui esse tipo. Utilizaremos, portanto, o tipo
+    \texttt{int}.
+\end{frame}
+
+\begin{frame}[fragile]{Declarando as variáveis}
+    Assim, a declaração dos preços dos produtos será:
+
+    \begin{minted}{java}
+        int breadPrice = 50;
+        int milkPrice = 300;
+        int juicePrice = 500;
+        int pizzaPrice = 999;
+    \end{minted}
+\end{frame}
+
+
+\subsection{Interação com o usuário}
+
+\begin{frame}[fragile]{Interagindo com o usuário}
+    Em nossa loja será necessário informar a quantidade de cada produto
+    que o cliente está levando (para poder calcular o total a ser pago).
+
+    Para isso, é possível pedir ao usuário que digite um texto no Console (ou
+    Terminal), ler esse texto e guardar em uma variável:
+
+    \begin{minted}{java}
+    System.console().readLine("Digite algo: ");
+    \end{minted}
+\end{frame}
+
+\begin{frame}[fragile]{Conversão: Texto para número}
+    Vale apontar, porém, que o tipo de dado retornado pelo
+    \texttt{readLine(\ldots)} é de texto (chamado \textbf{\texttt{String}}). Porém,
+    queremos utilizar um tipo numérico, e precisamos converter esse texto para
+    um número inteiro. Isso pode ser feito com:
+
+    \begin{minted}{java}
+    Integer.parseInt(texto);
+    \end{minted}
+    E em seguida jogar o resultado em uma variável do tipo inteiro.
+\end{frame}
+
+\begin{frame}[fragile]{Interação com o usuário}
+    Assim, para pedir ao usuário que digite quantos pães está comprando, basta utilizar:
+
+    \begin{minted}{java}
+    String answer = System.console().readLine(
+            "Quantidade de pães comprados: "
+        );
+    int breads = Integer.parseInt(answer);
+    \end{minted}
+
+    Ou ainda:
+
+    \begin{minted}{java}
+    int breads = Integer.parseInt(
+            System.console().readLine(
+                "Quantidade de pães comprados: "
+            )
+        );
+    \end{minted}
+\end{frame}
+
+
+\subsection{Estruturas condicionais}
+
+\begin{frame}{Tomada de decisão}
+    Em nosso programa, queremos mostrar na tela apenas os produtos que forem
+    comprados (afinal, uma loja geralmente tem centenas de produtos
+    cadastrados). Porém, como dizer para nosso programa apenas executar um
+    trecho de código se e somente se uma condição for satisfeita?
+
+    Ou seja, como podemos fazer nosso programa tomar decisões?
+\end{frame}
+
+\begin{frame}[fragile]{Variáveis lógicas}
+    Em programação, há um tipo de dado chamado "Lógico", que possui apenas dois
+    valores possíveis: \textbf{verdadeiro} e \textbf{falso}. Em Java, esse tipo
+    se chama \texttt{boolean}:
+
+    \begin{minted}{java}
+    boolean a = true;
+    boolean b = false;
+    boolean c = 5 > 3; // true
+    boolean d = 5 < 3; // false
+    \end{minted}
+\end{frame}
+
+\begin{frame}{Operadores lógicos}
+    \begin{center}
+        \begin{tabular}{|c|l|}
+            \hline Operador & Descrição \\ \hline
+            \texttt{!x} & \texttt{true} se \texttt{x} for \texttt{false} (inversor/NOT). \\
+            \texttt{x == y} & \texttt{true} se os valores forem iguais. \\
+            \texttt{x $!$= y} & \texttt{true} se os valores forem diferentes. \\
+            \texttt{x > y} & \texttt{true} se \texttt{x} for maior do que \texttt{y}. \\
+            \texttt{x < y} & \texttt{true} se \texttt{x} for menor do que \texttt{y}. \\
+            \texttt{x >= y} & \texttt{true} se \texttt{x} for maior ou igual a \texttt{y}. \\
+            \texttt{x <= y} & \texttt{true} se \texttt{x} for menor ou igual a \texttt{y}. \\
+            \texttt{x \&\& y} & \texttt{true} se \textbf{ambos} \texttt{x} e \texttt{y} forem \texttt{true} (AND). \\
+            \texttt{x || y} & \texttt{true} se pelo menos um dos dois valores forem \\
+            & \texttt{true} (OR). \\
+            \texttt{x \^{} y} & \texttt{true} se apenas \texttt{x} ou apenas \texttt{y} for \texttt{true}, \\
+            & mas \textbf{não ambos ao mesmo tempo}. (XOR). \\
+            \hline
+        \end{tabular}
+    \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{Estrutura condicional \texttt{if}}
+    Para que nosso programa possa "escolher"\ se vai ou não executar determinado
+    trecho, há uma estrutura de código chamada \texttt{if}, em que é entregue
+    qualquer valor do tipo \texttt{boolean} entre parênteses e, se durante a
+    execução esse valor for \texttt{true}, o trecho de código dentro das chaves
+    será executado.
+
+    \begin{minted}{java}
+    if (condição) {
+        /*
+            trecho a ser executado caso a condição
+            seja verdadeira
+        */
+    }
+    \end{minted}
+\end{frame}
+
+\begin{frame}[fragile]{Exibindo texto no console}
+    Assim, para que o produto "Pão"\ seja apenas exibido se for comprado mais
+    de um pão, podemos escrever:
+
+    \begin{minted}{java}
+    if (breads > 0) {
+        System.out.println(
+            "Foram comprados " + breads + " pães"
+        );
+    }
+    \end{minted}
+
+    \emph{OBS}: Perceba que é possível juntar textos (\texttt{String}s) com
+    outros valores (incluindo outras \texttt{String}s) utilizando "+".
+\end{frame}
+
+\begin{frame}{Escolhendo a forma de pagamento}
+    Ao final da compra, o cliente irá querer escolher a forma de pagamento.
+    Podemos estabelecer três opções:
+
+    \begin{itemize}
+        \item Se o usuário digitar "C", o pagamento será efetuado com Cartão;
+        \item Se o usuário digitar "D", o pagamento será efetuado em dinheiro.
+        \item Para qualquer texto diferente que for digitado o programa irá
+            alertar que a opção é inválida.
+    \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{\texttt{If}-\texttt{Else}}
+    Para isso, podemos fazer uma opção extra caso um \texttt{if} falhe, através
+    de \texttt{else}:
+
+    \begin{minted}{java}
+    String paymentForm = System.console().readLine(
+        "Escolha a forma de pagamento " +
+        "(C = Cartão, D = Dinheiro): "
+    );
+    if (paymentForm.equals("C")) {
+        System.out.println("Escolhido: Cartão.");
+    } else if (paymentForm.equals("D") {
+        System.out.println("Escolhido: Dinheiro.");
+    } else {
+        System.out.println("Forma de pagamento inválida.");
+    }
+    \end{minted}
 \end{frame}
 
 \end{document}
