finished course plan

--- a/plan/plan.bib
+++ b/plan/plan.bib
@@ -4,3 +4,18 @@
     url = "https://docs.oracle.com/javase/8/docs/api/index.html",
     note = "https://docs.oracle.com/javase/8/docs/api/index.html",
 }
+
+@book{Cormen:2001:IA:580470,
+    author = {Cormen, Thomas H. and Stein, Clifford and Rivest, Ronald L. and Leiserson, Charles E.},
+    title = {Introduction to Algorithms},
+    year = {2001},
+    isbn = {0070131511},
+    edition = {2nd},
+    publisher = {McGraw-Hill Higher Education},
+}
+
+@book{Wazlawick:2012,
+    author = "Raul Sidnei Wazlawick",
+    title = {Engenharia de Software para Sistemas de Informação: Conceitos e práticas que fazem sentido},
+    year = {2012},
+}
