add additional course material slide

--- a/slides/class_1/class_1.tex
+++ b/slides/class_1/class_1.tex
@@ -539,4 +539,20 @@ public class Application {
     \end{minted}
 \end{frame}
 
+\begin{frame}{Material de Apoio}
+    \begin{itemize}
+        \item Exercícios com correção automática:
+            \url{http://pet.inf.ufsc.br/~jptiz/academico/}
+        \item Material do minicurso (explicação, códigos de exemplo, etc.):
+            \url{https://github.com/JPTIZ/java_minicourse/}
+    \end{itemize}
+
+    Exercícios da aula de hoje:
+    \begin{itemize}
+        \item POO-I - Unidade 1: Variáveis, Operadores e Estruturas
+            Condicionais
+            (\url{http://pet.inf.ufsc.br/~jptiz/academico/exercicio/?course=pooi&unit=0})
+    \end{itemize}
+\end{frame}
+
 \end{document}
