adding hints and tips

--- a/slides/class_1/class_1.tex
+++ b/slides/class_1/class_1.tex
@@ -539,6 +539,20 @@ public class Application {
     \end{minted}
 \end{frame}
 
+\begin{frame}{Dicas}
+    \begin{itemize}
+        \item Para melhorar o aprendizado, é interessante tentar fazer algum
+            programa que gostaria (um jogo ou simulador - mesmo que textual -)
+            ou que sirva de utilitário (calculadora de notas) e pesquise como
+            pode ser feito;
+        \item Grande parte de suas dúvidas podem ser perguntadas no site
+            "StackOverflow" (lembrando de checar se ela já não foi respondida
+            antes - vale ler as regras do site antes de perguntar);
+    \end{itemize}
+
+    \footnotesize "Aprende quem fuça" - CANCIAN, Rafael Luiz
+\end{frame}
+
 \begin{frame}{Material de Apoio}
     \begin{itemize}
         \item Exercícios com correção automática:
