updating shop with no quantity in product

--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -19,15 +19,15 @@
 \section{Identificação}
 
 \begin{itemize}
-    \item[] Disciplina: Minicurso Java
+    \item[] Disciplina: Minicurso de Java Moderno
     \item[]
         \hspace{-1em}
         \begin{tabular}{ccc}
             Carga Horária: 20 horas-aula&
             Teóricas: 10&
-            Práticas: 12
+            Práticas: 10
         \end{tabular}
-    \item[] Período: Março a Maio de 2017.
+    \item[] Período: Abril a Junho de 2017.
 \end{itemize}
 
 \section{Cursos (público alvo)}
