it's bubble, not binary

--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -162,7 +162,7 @@
             \item Busca linear e \textit{Binary-Search};
             \item Complexidade de Algoritmos;
             \item Notação assintótica;
-            \item \textit{Binary-Sort}.
+            \item \textit{Bubble-Sort}.
         \end{enumerate}
     \item Métodos, funções e procedimentos (2 horas):
         \begin{enumerate}
