fixed gui mention

--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -23,9 +23,9 @@
     \item[]
         \hspace{-1em}
         \begin{tabular}{ccc}
-            Carga Horária: 20 horas-aula&
+            Carga Horária: 18 horas-aula&
             Teóricas: 10&
-            Práticas: 10
+            Práticas: 8
         \end{tabular}
     \item[] Período: Setembro a Novembro de 2017.
 \end{itemize}
@@ -107,33 +107,29 @@
 
 \section{Objetivos}
 \begin{description}
-    \item[Geral:] Auxiliar na aprendizagem das disciplinas de
-        Programação Orientada a Objetos 1 e 2, produzindo um projeto em
-        console Java, seguido de sua adaptação para interface gráfica,
-        mostrando normas e passos para um código bem feito e
-        reutilizável.
+    \item[Geral:] Auxiliar na aprendizagem das disciplinas de Programação
+        Orientada a Objetos 1 e 2, produzindo um projeto em console Java,
+        mostrando normas e passos para um código bem feito e reutilizável.
     \item[Específico:] São objetivos do minicurso:
         \begin{itemize}[label={-}]
-            \item Apresentar as especificidades básicas da linguagem
-                Java, dentre elas:
+            \item Apresentar as especificidades básicas da linguagem Java,
+                dentre elas:
                 \begin{itemize}[label={-}]
                     \item Classe principal e método \texttt{main};
-                    \item Formas de declarar/instanciar variáveis e
-                        vetores;
+                    \item Formas de declarar/instanciar variáveis e vetores;
                     \item Ciclo de vida das variáveis;
                     \item Referência e cópia;
                     \item Funcionamento do método construtor.
                 \end{itemize}
-            \item Criar um projeto simples para mostrar o uso das
-                estruturas básicas (comparação, seleção, repetição,
-                funções\ldots) da programação imperativa;
+            \item Criar um projeto simples para mostrar o uso das estruturas
+                básicas (comparação, seleção, repetição, funções\ldots) da
+                programação imperativa;
             \item Melhorar o desempenho e entendimento dos alunos nas
                 disciplinas de Programação Orientada a Objetos 1 e 2;
-            \item Instruir os participantes a respeito das boas
-                práticas de programação, a fim de que façam códigos bem
-                estruturados, reutilizáveis e legíveis, aplicando
-                conceitos de código-limpo e que façam escolhas
-                adequadas de padrões de projetos;
+            \item Instruir os participantes a respeito das boas práticas de
+                programação, a fim de que façam códigos bem estruturados,
+                reutilizáveis e legíveis, aplicando conceitos de código-limpo e
+                que façam escolhas adequadas de padrões de projetos;
             \item Introduzir noções de algoritmos e resolução de
                 problemas computacionalmente;
             \item Criar um projeto com enfoque no uso de diferentes recursos de
