adding code documentation to plan

--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -189,7 +189,8 @@
                 \item Cópia e Referência;
                 \item Depuração de código;
                 \item Encapsulamento de atributos;
-                \item Boas práticas: API\@.
+                \item Boas práticas: API\@;
+                \item Documentação de código.
             \end{enumerate}
         \end{samepage}
     \item Padrões de Projeto (2 horas):
